<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_AlarmModules" Id="{785a80b5-ff40-41f5-8e5f-61a0dede7b01}">
    <Declaration><![CDATA[TYPE ST_AlarmModules :
STRUCT
	Level:ARRAY[1..NO_OF_LEVEL] OF ST_AlarmTags;
	Common:ST_AlarmTags;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>