<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="ST_Event" Id="{ed64d835-b53d-4b27-83e8-11419b03455c}">
    <Declaration><![CDATA[TYPE ST_Event :
STRUCT
	// Command or Event name 
	sEventName: STRING(80);
	//Parameter 1..6
	arrParameter: ARRAY [1..6] OF STRING(80);
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>